# esp-idf-st7796s

./: .gitignore  BuildAndFlash.ps1  CMakeLists.txt  CleanBuildEnvironment.ps1  ESP32-S3-WROOM-1.md  Manage-History.ps1  README.md  ReconfigureBuildAndFlash.ps1  esp-idf-st7796s.code-workspace  lolin_es32_s3_arduino_pins.h  rgb565ani-processing.ipynb  sdkconfig  sdkconfig.defaults  sdkconfig.old  video_processing.ipynb
.history/: esp-idf-st7796s_20241123015118.code-workspace  sdkconfig_20241116203634.defaults
.history/main/: CMakeLists_20241116222651.txt  CMakeLists_20241116222656.txt  CMakeLists_20241116222702.txt  CMakeLists_20241116222719.txt  CMakeLists_20241116222721.txt  CMakeLists_20241116222724.txt  CMakeLists_20241116222726.txt  CMakeLists_20241116222731.txt  CMakeLists_20241116222732.txt  CMakeLists_20241116222737.txt  CMakeLists_20241116222747.txt  CMakeLists_20241116222750.txt  CMakeLists_20241116222827.txt  CMakeLists_20241116224913.txt  CMakeLists_20241116225116.txt  CMakeLists_20241116225918.txt  CMakeLists_20241117050506.txt  CMakeLists_20241117050508.txt  Kconfig_20241116203730.projbuild  Kconfig_20241123012136.projbuild  Kconfig_20241123012137.projbuild  Kconfig_20241123012153.projbuild  decode_png_20241123044211.c  esp-idf-st7789_20241116235451.code-workspace  main_20241116235356.c  (+108 more)
.lh/: esp-idf-st7796s.code-workspace.json  sdkconfig.defaults.json
components/nsgif/: CMakeLists.txt
components/nsgif/src/: gif.c
main/: CMakeLists.txt  Kconfig.projbuild  decode_gif.c  decode_gif.h  decode_rgb565ani.c  decode_rgb565ani.h  gpio_led.c  gpio_led.h  idf_component.yml  main.c  st7796s.c  st7796s.h  tusb_config.h
(+11 files in other folders)
